# ran-traffic-monitor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dags/: el_dag.py  simulator_dag.py
simulator/: ran_simulator.py
src/: crud.py  database.py  models.py  schemas.py
